2002-04-08  Anders Carlsson  <andersca@gnu.org>

	* libgnome/Makefile.am (test_libgnome_LDADD): Add LIBGNOME_LIBS,
	hopefully fixing #73050.

	* libgnome/gnome-url.h: #include <glib/gerror.h>.

	* libgnome/gnome-macros.h: Move #include into the #ifndef so the
	file gets to be properly guarded. Fixes #71406 reported by
	Morten Welinder.

2002-04-07  Philip Langdale  <philipl@mail.utexas.edu>

	* help-converters/info/html.c: Uncommented code that generated
	header for html (including the page title). No idea why this
	was commented out. Fixes bug #64495

2002-04-04  Anders Carlsson  <andersca@gnu.org>

	* libgnome/gnome-init.c: Make --version work, thanks to Stephen
	Browne for noticing.

2002-03-29  Lauris Kaplinski  <lauris@ximian.com>

	* schemas/gnome_url_handler.schemas: Updated schema, originally
	by Bradford Hovinen.

	* libgnome/gnome-url.c (gnome_url_show): Update key name to match
	schema
	(gnome_url_default_handler): Update key names to match schemas

2002-03-29  Jody Goldberg <jody@gnome.org>

	* schemas/desktop_gnome_accessibility_keyboard.schemas : Dear lord I
	  apologize for failing grade 3 spelling.  PLEASE don't humiliate me
	  like this again.

2002-03-29  Anders Carlsson  <andersca@gnu.org>

	* Release 1.114.0

2002-03-29  Zbigniew Chyla  <cyba@gnome.pl>

	* libgnome/gnome-url.c (gnome_url_show):
	Removed const to avoid warning.

2002-03-29  Havoc Pennington  <hp@pobox.com>

	* libgnome/gnome-url.c (gnome_url_show): use g_shell_parse_argv()
	instead of popt function
	(gnome_url_show): quote url for shell so we don't run shell
	commands found in the url. Using a shell here is perhaps 
	not a good idea anyway...

	* monikers/bonobo-config-bag.c (impl_Bonobo_PropertyBag_getValue):
	don't use private gconf fields
	(impl_Bonobo_PropertyBag_getValues): ditto, also handle 
	NULL entry values

2002-03-26  Dave Camp  <dave@ximian.com>

	* schemas/Makefile.am (schema_DATA): Add
	desktop_gnome_sound.schemas.

2002-03-23 John Fleck <jfleck@inkstain.net>
