@@ -1,5 +1,8 @@
 2002-04-08  Anders Carlsson  <andersca@gnu.org>
 
+	* libgnome/gnome-score.c: Add patch from Andrey Panov that makes
+	the score files use real names instead of login names. (#75197).
+
 	* libgnome/Makefile.am (test_libgnome_LDADD): Add LIBGNOME_LIBS,
 	hopefully fixing #73050.
 
